Format / legibility fix

--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,22 @@
   background: #1d3f6e;
   height: 100vh;
   width: 100vw;
+  color: rgb(240,240,240);
 }
 
 .wrapper {
   padding: 25px;
-  border: 0.1px solid rgb(96,96,96);
+  
   display: flex;
   flex-direction: column;
   width: 40%;
   height: auto;
-  background: rgba(219,216,216,0.25);
+  background: rgba(0,0,0,0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter:blur(4px);
   border-radius: 10px;
-  border: 1px solid rgba(255,255,255,0.18);
+  
 
   font-size: 20px;
 }
@@ -40,8 +41,14 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 30px;
 }
 
 .location_input {
   font-size: 20px;
+}
+
+p {
+  margin-left: 26px;
+  margin-right: 26px;
 }
